[metadata]
name = sol_binder
version = 0.0.1
author = Spring Games
author_email = github@springames.com
description = A package for working with Solidity contracts
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    web3
    py-solc-x
    click

[options.packages.find]
where = src
